# SimpleEngine3ds

./: CMakeLists.txt  Makefile  README.md  smb3DS.code-workspace
buildtools/: servefiles.py
gfx/: mariosmall.t3s  tiles.t3s
output/: smb3ds.3dsx  smb3ds.elf  smb3ds.smdh
resources/: AppInfo
romfs/gfx/: mariosmall.t3x  tiles.t3x
source/: level.cpp  level.hpp  main.cpp  main.hpp  mario.cpp  mario.hpp  mzmgame.cpp  mzmgame.hpp
